--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "chat-react-client": "file:..",
+    "lodash": "^4.17.15",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-icons": "^3.10.0",
