Fixed ESLint to API and example and applied to all files

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,9 @@
     "react/jsx-handler-names": 0,
     "react/jsx-fragments": 0,
     "react/no-unused-prop-types": 0,
-    "import/export": 0
+    "import/export": 0,
+    "comma-dangle": 0,
+    "prefer-template": 1,
+    "prefer-promise-reject-errors": 0
   }
 }
