--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "semi": false,
   "tabWidth": 2,
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "arrowParens": "always",
   "trailingComma": "es5"
 }
