--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,9 @@
     "start": "node ../node_modules/react-scripts/bin/react-scripts.js start",
     "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
     "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
+    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject",
+    "lint": "node ../node_modules/eslint/bin/eslint -c ../.eslintrc src",
+    "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
