--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "lint": "eslint src",
+    "lint:fix": "npm run lint --fix",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
