--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
     "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject",
-    "lint": "node ../node_modules/eslint/bin/eslint -c ../.eslintrc src",
+    "lint": "node ../node_modules/.bin/eslint -c ../.eslintrc src",
     "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
