--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "chat-react-client": "file:..",
     "lodash": "^4.17.15",
