--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "import/export": 0,
     "comma-dangle": 0,
     "prefer-template": 1,
+    "arrow-body-style": [1, "as-needed"],
     "prefer-promise-reject-errors": 0,
     "prettier/prettier": [1 , { "endOfLine":"lf" }]
   }
